--- a/index.html
+++ b/index.html
@@ -69,13 +69,14 @@
             width: 60px;
             height: 60px;
             border-radius: 12px;
-            background: linear-gradient(135deg, #ff6b9d, #c44589);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 28px;
-            color: white;
             box-shadow: 0 4px 15px rgba(196, 69, 137, 0.3);
+            overflow: hidden;
+        }
+        
+        .app-icon img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
         
         .header-text h1 {
@@ -412,14 +413,16 @@
         <div class="container">
             <div class="header-content">
                 <div class="header-left">
-                    <div class="app-icon">🗓️</div>
+                    <div class="app-icon">
+                        <img src="img/icon_180pt.png" alt="AlcoCalendar アイコン">
+                    </div>
                     <div class="header-text">
                         <h1>AlcoCalendar</h1>
                         <p>飲酒・禁酒記録カレンダー</p>
                     </div>
                 </div>
                 <nav class="nav-links">
-                    <a href="#features" class="nav-link">🎯 主な機能</a>
+                    <a href="#features" class="nav-link"><img src="img/icon_180pt.png" alt="" style="width: 16px; height: 16px; margin-right: 6px; vertical-align: text-bottom;"> 主な機能</a>
                     <a href="#privacy" class="nav-link">🔒 プライバシー</a>
                     <a href="#support" class="nav-link">🆘 サポート</a>
                 </nav>
@@ -448,7 +451,7 @@
 
         <section id="features" class="section">
             <div class="container">
-                <h2 class="section-title">🎯 主な機能</h2>
+                <h2 class="section-title"><img src="img/icon_180pt.png" alt="" style="width: 36px; height: 36px; margin-right: 12px; vertical-align: text-bottom;"> 主な機能</h2>
                 <div class="features-grid">
                     <div class="feature-card">
                         <div class="feature-icon">📅</div>
